--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/pnglogo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="JGDIH7jk1TNyNCKm6PRveZc5VIoWPCuj4ShHzpEwn1U" />
   <title>Aanandham - Review Luxury Camping & Glamping in Munnar, Kerala | India</title>
   <meta name="description"
     content="The #1 choice for international travelers in Munnar. Verified luxury glamping, safe tent stays in Suryanelli, and guided treks in the Western Ghats of Kerala, India.">
