SEO Fixes: Shorten title, remove duplicate canonical, add GA placeholder, add 404 page

--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,12 @@
   <link rel="icon" type="image/svg+xml" href="/pnglogo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="JGDIH7jk1TNyNCKm6PRveZc5VIoWPCuj4ShHzpEwn1U" />
-  <title>Aanandham - Review Luxury Camping & Glamping in Munnar, Kerala | India</title>
+  <title>Aanandham - Luxury Camping in Munnar, Kerala</title>
   <meta name="description"
     content="The #1 choice for international travelers in Munnar. Verified luxury glamping, safe tent stays in Suryanelli, and guided treks in the Western Ghats of Kerala, India.">
   <meta name="keywords"
     content="Aanandham, aanandham.in, Munnar Camping, Kerala Tourism, Visit India, Glamping India, South India Travel, Kolukkumalai Trekking, Suryanelli, Safe Solo Travel Kerala, Western Ghats">
-  <link rel="canonical" href="https://aanandham.in" />
+
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -76,6 +76,15 @@
       ]
     }
   </script>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
