--- a/client/index.html
+++ b/client/index.html
@@ -77,12 +77,12 @@
     }
   </script>
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SVMQKJQT28"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-SVMQKJQT28');
   </script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
